--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ texture:
 
   social_links:
     twitter: bluebutterflied 
-    github:  bluebutterflied
+    github:  sandsoftimes
     linkedIn: in/bluebutterflied 
     youtube: c/sultan_black
  
