--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: SandsOfTime - Sharjeel (SandsOfTime) on Computing, Learning and More ... 
+title: SandsOfTime - SANDY (SandsOfTime) on Computing, Learning and More ... 
 author: SandsOfTime
 email: janeebee1092@gmail.com 
 description: > # this means to ignore newlines until "show_exerpts:"
