--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ texture:
   title: SandsOfTimes
   tagline: SANDY (SandsOfTimes) on Computing, Learning and more...
   date_format: "%b %-d, %Y"
-  style: blue 
+  style: black
   showNav: true 
   showPicker: false
 
